# Thermite

./: .gitignore  Cargo.toml  README.md  build.rs
assets/shaders/: main.vert
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
src/: application.rs  event.rs  main.rs  opengl.rs  resources.rs  thermite_gfx.rs
src/math/: vector.rs
src/old/: hal_state.rs  old.rs  shader.rs  window.rs
src/old/ogl/: buffer_layout.rs  camera.rs  index_buffer.rs
src/opengl/: buffer_layout.rs  camera.rs  index_buffer.rs  shaders.rs  texture.rs  vertex_array.rs  vertex_buffer.rs  window.rs
src/thermite_core/: resources.rs
src/thermite_gfx/: hal_state.rs  shaders.rs  texture.rs  vertex_array.rs  vertex_buffer.rs  window.rs
thermite_core/: Cargo.toml
thermite_core/src/: lib.rs  resources.rs
thermite_core/src/input/: keyboard.rs  mod.rs  mouse.rs
thermite_core/src/messaging/: bus.rs  event.rs  mod.rs  publish.rs  subscribe.rs  types.rs
thermite_core/src/messaging/rc/: bus.rs  event.rs  publish.rs  subscribe.rs
thermite_core/src/messaging/sync/: bus.rs  event.rs  publish.rs  subscribe.rs
thermite_core/src/platform/: event.rs  layer.rs  mod.rs
thermite_core/src/tools/: timer.rs
thermite_gfx/: Cargo.toml  build.rs
thermite_gfx/assets/shaders/: main.frag
thermite_gfx/assets/shaders/glsl/: p1.frag  p1.vert  test.frag  test.vert
thermite_gfx/assets/shaders/hlsl/: test.frag.hlsl  test.vert.hlsl
thermite_gfx/assets/shaders/metal/: test.frag.metal
thermite_gfx/assets/shaders/spirv/: test.frag.spv  test.vert.spv  test_old.vert.spv
thermite_gfx/src/: hal_state.rs  lib.rs  primitives.rs  rendering.rs  shader.rs  window.rs
thermite_gfx/src/hal/: command_pool.rs  gpu_pool.rs  hal_state.rs  mod.rs  types.rs
thermite_gfx/src/primitives/: buffer.rs  vertex.rs
thermite_gfx/src/rendering/: hal_state.rs  mesh.rs
thermite_gfx/src/resources/: mesh.rs
thermite_gfx/src/shaders/: shader.rs
thermite_math/: Cargo.toml
thermite_ui/: Cargo.toml
thermite_ui/src/: lib.rs  window.rs
