[package]
name = "thermite"
version = "0.1.0"
authors = ["Jon Bailey <jonathan.bailey@comcast.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "*"
gl = { path = "lib/gl" }
image = "*"

[build-dependencies]
walkdir = "2.1"

[features]
gl_debug = ["gl/debug"]
