[package]
name = "thermite"
version = "0.1.0"
authors = ["Jon Bailey <jonathan.bailey@comcast.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
walkdir = "*"
shaderc = "0.6"

[dependencies]
thermite_core = { path = "thermite_core", version = "=0.1.0" }
thermite_gfx = { path = "thermite_gfx", version = "=0.1.0" }
log = "=0.4.11"
simple_logger = "=1.6.0"
uuid = "=0.8.1"
psbus = "=0.1.0"
