[package]
name = "thermite_core"
version = "0.1.0"
authors = ["Jon Bailey <jonathan.bailey@comcast.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_logger = "=1.6.0"
winit = "=0.22.2"
bitflags = "=1.2.1"
uuid = "=0.8.1"
