[package]
name = "thermite_gfx"
version = "0.1.0"
authors = ["Jon Bailey <jonathan.bailey@comcast.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfx-hal = "=0.5.3"

[target.'cfg(target_os = "macos")'.dependencies.backend]
package = "gfx-backend-metal"
version = "=0.5.6"

[target.'cfg(windows)'.dependencies.backend]
package = "gfx-backend-dx12"
version = "=0.5.8"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies.backend]
package = "gfx-backend-vulkan"
version = "=0.5.11"
