[package]
name = "thermite_gfx"
version = "0.1.0"
authors = ["Jon Bailey <jonathan.bailey@comcast.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
walkdir = "=2.3.1"
shaderc = "=0.6.2"
spirv_cross = "=0.20.0"

[dependencies]
thermite_core = { path = "../thermite_core", version = "=0.1.0" }
gfx-hal = "=0.5.3"
raw-window-handle = "=0.3.3"
serde = { version = "=1.0.114", features = ["derive"] }
bincode = "=1.3.1"
winit = "=0.22.2"

[target.'cfg(target_os = "macos")'.dependencies.backend]
package = "gfx-backend-metal"
version = "=0.5.6"

[target.'cfg(windows)'.dependencies.backend]
package = "gfx-backend-dx12"
version = "=0.5.8"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies.backend]
package = "gfx-backend-vulkan"
features = ["x11"]
version = "=0.5.11"
